Implement backend integration to support frontend connectivity